Changes homepage, about, roadmap

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             With the outburst, the competition is also increasing, making it hard for new joiners to succeed in the world of streaming. Our goal is to be a life changer for as many small streamers as possible.</div>
         </div>
         <div id="s2-mid">
-          <div class="s2-description_img"><img src="" alt="Img description"></div>
+          <div class="s2-img"><img src="" alt="Img description"></div>
           <div id="s2-description_mid">
             <div class="s2-description_title">How ?</div>
             <div class="s2-description_text">By having weekly raids and donations to underrated streamers picked up by community. They will be promoted on our website, socials, and inside our community. 
@@ -157,47 +157,60 @@
     <section data-index="2" id="Roadmap" class="s3">
       <div class="s3-div_Roadmap" id="s3-div_title">Roadmap</div>
       <div class="s3-div_Roadmap" id="s3-div_timeline">
-        <div class="s3-timeline_container" id="s3-timeline_side">
-          <div class="s3-timeline_item" id="s3-timeline_item_side">
+        <div class="s3-timeline_container">
+          <div class="s3-timeline_item">
             <div class="s3-timeline_item_title">Q1</div>
             <ul class="s3-timeline_item_text">
               <li>Token launch</li>
-              <li>List on pancakeswap</li>
+              <li>List on PancakeSwap</li>
               <li>Create the website</li>
-              <li>Create the social profiles</li>
+              <li>Create the social media</li>
               <li>Whitepaper</li>
-              <li>Small influencers marketing</li>
+              <li>Influencers marketing</li>
               <li>First stream raid</li>
             </ul>
           </div>
-          <div class="s3-timeline_circle" id="s3-timeline_circle_top"></div>
+          <div class="s3-timeline_circle-div">
+            <div class="s3-timeline_circle" id="s3-timeline_circle_top"></div>
+          </div>
+          <div class="s3-spacing"></div>
         </div>
-        <div class="s3-timeline_container" id="s3-timeline_mid">
-          <div class="s3-timeline_circle" id="s3-timeline_circle_mid"></div>
-          <div class="s3-timeline_item" id="s3-timeline_item_mid">
+
+        <div class="s3-timeline_container">
+          <div class="s3-spacing"></div>
+          <div class="s3-timeline_circle-div">
+            <div class="s3-timeline_circle" id="s3-timeline_circle_mid"></div>
+          </div>
+          <div class="s3-timeline_item">
             <div class="s3-timeline_item_title">Q2</div>
             <ul class="s3-timeline_item_text">
               <li>Coingecko application</li>
               <li>CMC application</li>
               <li>Contract audit</li>
-              <li>Create streamraids mobile app (wallet/stream promoting and other features)</li>
-              <li>Mid/big influencers marketing</li>
-              <li>Have at least one big streamer as part of the community</li>
-              <li>Start designing and working on a streaming mentorship platform</li>
+              <li>Create Streamraids mobile app</li>
+              <li>More influencers marketing</li>
+              <li>Streamers as part of the community</li>
+              <li>Develop a streaming mentorship platform</li>
             </ul>
           </div>
         </div>
-        <div class="s3-timeline_container" id="s3-timeline_side">
-          <div class="s3-timeline_item" id="s3-timeline_item_side">
+        
+
+        <div class="s3-timeline_container">
+          <div class="s3-timeline_item">
             <div class="s3-timeline_item_title">Q3</div>
             <ul class="s3-timeline_item_text">
               <li>Charity stream</li>
               <li>Merch</li>
-              <li>TBA</li>
+              <li>More to come...</li>
             </ul>
           </div>
-          <div class="s3-timeline_circle" id="s3-timeline_circle_bot"></div>
+          <div class="s3-timeline_circle-div">
+            <div class="s3-timeline_circle" id="s3-timeline_circle_bot"></div>
+          </div>
+          <div class="s3-spacing"></div>
         </div>
+
       </div>
     </section>
 
@@ -215,6 +228,7 @@
           <div class="s4-info_item"><p class="s4-info_name">Market Cap</p><p class="s4-info_number">2</p></div>
           <div class="s4-info_item"><p class="s4-info_name">Holders</p><p class="s4-info_number">2</p></div>
         </div>
+        
         <div id="s4-div_info_right"> 
           <div class="s4_info_fee_item">
             <p class="s4-info_fee_name">Fees:</p>
