Changes on titles, deleted a lot of commented parts, added some animations. S1, S2, S3 finished
S2 finished except for the image

--- a/index.html
+++ b/index.html
@@ -137,14 +137,14 @@
       </div>
       <div class="s2-div_About" id="s2-div_description">
         <div id="s2-top">
-          <div class="s2-description_title">Why ?</div>
+          <div class="s2-description_title">Why <span class="letter_blink">?</span></div>
           <div class="s2-description_text">The streaming platforms are increasing day by day, the pandemic made many people join the streaming community and as a result, we can see the outburst these platforms had in the last months.
             With the outburst, the competition is also increasing, making it hard for new joiners to succeed in the world of streaming. Our goal is to be a life changer for as many small streamers as possible.</div>
         </div>
         <div id="s2-mid">
           <div class="s2-img"><img src="" alt="Img description"></div>
           <div id="s2-description_mid">
-            <div class="s2-description_title">How ?</div>
+            <div class="s2-description_title" id="s2_how">H<span class="letter_blink">o</span>w ?</div>
             <div class="s2-description_text">By having weekly raids and donations to underrated streamers picked up by community. They will be promoted on our website, socials, and inside our community. 
               This will boost up their streaming career, give them some exposure, and increase their motivation to keep up the good work they're already doing.</div>
           </div>
@@ -155,7 +155,7 @@
     <div class="divider" id="divider_roadmap"></div>
 
     <section data-index="2" id="Roadmap" class="s3">
-      <div class="s3-div_Roadmap" id="s3-div_title">Roadmap</div>
+      <div class="s3-div_Roadmap letter_blink" id="s3-div_title">Roadmap</div>
       <div class="s3-div_Roadmap" id="s3-div_timeline">
         <div class="s3-timeline_container">
           <div class="s3-timeline_item">
@@ -243,10 +243,10 @@
     <div class="divider" id="divider_theTeam"></div>
 
     <section data-index="4" id="The_Team" class="s5">
-      <div class="s5-div_team" id="s5-div_title">Our Team</div>
+      <div class="s5-div_team" id="s5-div_title">The Team</div>
       <div class="s5-div_team" id="s5-div_content">
         <div class="s5-team_item">
-          <div class="s5-team_img"><img src="/images/mickey01.jpg" alt="img"></div>
+          <div class="s5-team_img"><img class="s5-img" src="/images/mickey01.jpg" alt="img"></div>
           <div class="s5-team_description">Lorem, ipsum.</div>
           <div class="s5-team_socials">
             <a class="s5-team_socials_img" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="invert" src="/media/twitter.svg" alt="img"></a>
@@ -254,7 +254,7 @@
           </div>
         </div>
         <div class="s5-team_item">
-          <div class="s5-team_img"><img src="/images/mickey01.jpg" alt="img"></div>
+          <div class="s5-team_img"><img class="s5-img" src="/images/mickey01.jpg" alt="img"></div>
           <div class="s5-team_description">Lorem, ipsum.</div>
           <div class="s5-team_socials">
             <a class="s5-team_socials_img" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="invert" src="/media/twitter.svg" alt="img"></a>
@@ -262,7 +262,7 @@
           </div>
         </div>
         <div class="s5-team_item">
-          <div class="s5-team_img"><img src="/images/mickey01.jpg" alt="img"></div>
+          <div class="s5-team_img"><img class="s5-img" src="/images/mickey01.jpg" alt="img"></div>
           <div class="s5-team_description">Lorem, ipsum.</div>
           <div class="s5-team_socials">
             <a class="s5-team_socials_img" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="invert" src="/media/twitter.svg" alt="img"></a>
@@ -270,7 +270,7 @@
           </div>
         </div>
         <div class="s5-team_item">
-          <div class="s5-team_img"><img src="/images/mickey01.jpg" alt="img"></div>
+          <div class="s5-team_img"><img class="s5-img" src="/images/mickey01.jpg" alt="img"></div>
           <div class="s5-team_description">Lorem, ipsum.</div>
           <div class="s5-team_socials">
             <a class="s5-team_socials_img" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="invert" src="/media/twitter.svg" alt="img"></a>
