Missing responisve an bogdan in the team, also miquel photo
ALMOST DONE!!!!

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body class="body">
     
-    <!-- <div class="ml4-div">
+    <div class="ml4-div">
       <div class="ml4">
         <span class="letters letters-1 noselect">WELCOME</span>
       </div>
@@ -26,13 +26,13 @@
       <div class="ml4">
         <span class="letters letters-3 noselect">STREAMRAIDS</span>
       </div>
-    </div> -->
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
-    <header class="header noselect">
+    <header class="header noselect s1-opacity_appear">
       <div class="logo_div">
         <a class="logo_link link" href="https://poocoin.app/tokens/0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank">
-          <img class ="logo_img" id="logo_header" src="" alt="StreamRaids LOGO">
+          <img class ="logo_img" id="logo_header" src="" alt="Streamraids Logo">
         </a>
       </div>
       <nav class="nav_bar">
@@ -44,7 +44,7 @@
       </nav>
     </header>
 
-    <div class="side_bar noselect">
+    <div class="side_bar noselect s1-opacity_appear">
       <div class="toggle"></div>
       <ul class="side_bar_list">
         <li class="side_bar-list-item" id="list_item-PancakeSwap">
@@ -95,7 +95,7 @@
       <div class="s1_text noselect">
 
           <a class="s1-text_titleName" href="https://t.me/streamraidsbsc" target="_blank">
-            <span>S<span class="s1_blink" id="s1_blink_1">T</span>R<span class="s1_blink" id="s1_blink_2">E</span><span class="s1_blink" id="s1_blink_3">A</span><span class="s1_blink" id="s1_blink_4">M</span>RAIDS</span>
+            S<span class="s1_blink" id="s1_blink_1">T</span>R<span class="s1_blink" id="s1_blink_2">E</span><span class="s1_blink" id="s1_blink_3">A</span><span class="s1_blink" id="s1_blink_4">M</span>RAIDS
           </a>
 
           <!-- <p class="s1-text_description">
@@ -104,7 +104,7 @@
           
       </div>
 
-      <div class="s1_buttons">
+      <div class="s1_buttons s1-opacity_appear">
         <a id="buy_button" class="link" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank">
           <span></span>
           <span></span>
@@ -144,7 +144,7 @@
             With the outburst, the competition is also increasing, making it hard for new joiners to succeed in the world of streaming. Our goal is to be a life changer for as many small streamers as possible.</div>
         </div>
         <div id="s2-mid">
-          <div class="s2-img"><img src="" alt="Img description"></div>
+          <div class="s2-img"><img src="" alt="Streamraids Logo"></div>
           <div id="s2-description_mid">
             <div class="s2-description_title noselect" id="s2_how">H<span class="letter_blink">o</span>w ?</div>
             <div class="s2-description_text">By having weekly raids and donations to underrated streamers picked up by community. They will be promoted on our website, socials, and inside our community. 
@@ -248,47 +248,48 @@
       <div class="s5-div_team noselect" id="s5-div_title">The Team</div>
       <div class="s5-div_team" id="s5-div_content">
         <div class="s5-team_item">
-          <div class="s5-team_img noselect"><img class="s5-img" src="/images/mickey01.jpg" alt="img"></div>
-          <div class="s5-team_description">Bogdan Luncasu</div>
+          <div class="s5-team_img noselect"><img class="s5-img" src="/images/mickey01.jpg" alt="Bogdan Luncasu profile image"></div>
+          <div class="s5-team_description s5-team_description-Name">Bogdan Luncasu</div>
           <div class="s5-team_description">Founder & Lead Developer</div>
           <div class="s5-team_socials noselect">
-            <a class="s5-team_socials_img" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="invert" src="/media/twitter.svg" alt="img"></a>
-            <a class="s5-team_socials_img" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="invert" src="/media/twitter.svg" alt="img"></a>
+            <a class="s5-team_socials_img" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="invert" src="/media/twitter.svg" alt="twitter"></a>
+            <a class="s5-team_socials_img" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="invert" src="/media/twitter.svg" alt="twitter"></a>
           </div>
         </div>
         <div class="s5-team_item">
-          <div class="s5-team_img noselect"><img class="s5-img" src="/media/WalKer.jpeg" alt="img"></div>
-          <div class="s5-team_description">Adria "TheWalker" Hernandez</div>
+          <div class="s5-team_img noselect"><img class="s5-img" src="/media/WalKer.jpeg" alt="Adrià Hernandez profile image"></div>
+          <div class="s5-team_description s5-team_description-Name">Adrià "TheWalker" Hernandez</div>
           <div class="s5-team_description">Web Dev</div>
           <div class="s5-team_socials noselect">
-            <a class="s5-team_socials_img" target="_blank" href="https://github.com/TheWalKer-TW"><img class="invert" src="/media/github-seeklogo.com.svg" alt="img"></a>
-            <a class="s5-team_socials_img" target="_blank" href="https://www.linkedin.com/in/adri%C3%A0-hern%C3%A1ndez-morell/"><img class="invert" src="/media/linkedin-icon-seeklogo.com.svg" alt="img"></a>
+            <a class="s5-team_socials_img" target="_blank" href="https://github.com/TheWalKer-TW"><img class="invert" src="/media/github-seeklogo.com.svg" alt="github"></a>
+            <a class="s5-team_socials_img" target="_blank" href="https://www.linkedin.com/in/adri%C3%A0-hern%C3%A1ndez-morell/"><img class="invert" src="/media/linkedin-icon-seeklogo.com.svg" alt="LinkedIn"></a>
           </div>
         </div>
         <div class="s5-team_item">
-          <div class="s5-team_img noselect"><img class="s5-img" src="/images/mickey01.jpg" alt="img"></div>
-          <div class="s5-team_description">Miquel Romeu</div>
+          <div class="s5-team_img noselect"><img class="s5-img" src="/images/mickey01.jpg" alt="Miquel Romeu profile image"></div>
+          <div class="s5-team_description s5-team_description-Name">Miquel Romeu</div>
           <div class="s5-team_description">Web Dev</div>
           <div class="s5-team_socials noselect">
-            <a class="s5-team_socials_img" target="_blank" href="https://github.com/MiquelRomeu"><img class="invert" src="/media/github-seeklogo.com.svg" alt="img"></a>
-            <a class="s5-team_socials_img" target="_blank" href="https://www.linkedin.com/in/miquel-romeu-go%C3%B1i-031663213/"><img class="invert" src="/media/linkedin-icon-seeklogo.com.svg" alt="img"></a>
+            <a class="s5-team_socials_img" target="_blank" href="https://github.com/MiquelRomeu"><img class="invert" src="/media/github-seeklogo.com.svg" alt="github"></a>
+            <a class="s5-team_socials_img" target="_blank" href="https://www.linkedin.com/in/miquel-romeu-go%C3%B1i-031663213/"><img class="invert" src="/media/linkedin-icon-seeklogo.com.svg" alt="LinkedIn"></a>
           </div>
         </div>
         <div class="s5-team_item">
-          <div class="s5-team_img noselect"><img class="s5-img" src="/media/Cheddar.png" alt="img"></div>
-          <div class="s5-team_description">Cheddar</div>
+          <div class="s5-team_img noselect"><img class="s5-img" src="/media/Cheddar.png" alt="Cheddar profile image"></div>
+          <div class="s5-team_description s5-team_description-Name">Cheddar</div>
           <div class="s5-team_description">Marketing</div>
           <div class="s5-team_socials noselect">
-            <a class="s5-team_socials_img" target="_blank" href="https://twitter.com/powersurgeson?s=09"><img class="invert" src="/media/twitter.svg" alt="img"></a>
+            <a class="s5-team_socials_img" target="_blank" href="https://twitter.com/powersurgeson?s=09"><img class="invert" src="/media/twitter.svg" alt="twitter"></a>
           </div>
         </div>
         <div class="s5-team_item">
-          <div class="s5-team_img noselect"><img class="s5-img" src="/images/mickey01.jpg" alt="img"></div>
-          <div class="s5-team_description">Maui</div>
-          <div class="s5-team_description">Branding</div>
+          <div class="s5-team_img noselect" id="s5-maui_img"><img class="s5-img" src="/media/MauiCreative_Logo.png" alt="Maui profile image"></div>
+          <div class="s5-team_description s5-team_description-Name">Maui</div>
+          <div class="s5-team_description">Branding & Graphic Designer</div>
           <div class="s5-team_socials noselect">
-            <a class="s5-team_socials_img" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="invert" src="/media/twitter.svg" alt="img"></a>
-            <a class="s5-team_socials_img" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="invert" src="/media/twitter.svg" alt="img"></a>
+            <a class="s5-team_socials_img" target="_blank" href="https://twitter.com/mauicrtv"><img class="invert" src="/media/twitter.svg" alt="twitter"></a>
+            <a class="s5-team_socials_img" target="_blank" href="https://www.instagram.com/mauicreativeuk/"><img class="invert" src="/media/instagram-seeklogo.com.svg" alt="instagram"></a>
+            <a class="s5-team_socials_img" target="_blank" href="https://www.mauicreative.co.uk/"><img class="invert" src="/media/red-mundial.svg" alt="portfolio"></a>
           </div>
         </div>
       </div>
