--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" href="/media/coming-soon.svg">
+    <link rel=”mask-icon” href=”/media/coming-soon.svg” color=”#000000">
     <title>Home | StreamRaids</title>
     <meta 
           name="description"
@@ -32,7 +34,7 @@
     <header class="header noselect s1-opacity_appear">
       <div class="logo_div">
         <a class="logo_link link" href="https://poocoin.app/tokens/0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank">
-          <img class ="logo_img" id="logo_header" src="" alt="Streamraids Logo">
+          <img class ="logo_img" src="./media/coming-soon.svg" alt="Streamraids Logo">
         </a>
       </div>
       <nav class="nav_bar">
@@ -118,19 +120,19 @@
       <div class="s2-div_About" id="s2-div_data">
         <div class="s2-stats">
           <div class="s2-stat_name">Current Price</div>
-          <div class="s2-stat_number">2</div>
+          <div class="s2-stat_number">$0.00000000004262</div>
         </div> 
         <div class="s2-stats">
           <div class="s2-stat_name">Hodlers</div>
-          <div class="s2-stat_number">2</div>
+          <div class="s2-stat_number">238</div>
         </div> 
         <div class="s2-stats">
           <div class="s2-stat_name">Supply</div>
-          <div class="s2-stat_number">2</div>
+          <div class="s2-stat_number">500,000,000,000,000</div>
         </div> 
         <div class="s2-stats">
           <div class="s2-stat_name">Market Cap</div>
-          <div class="s2-stat_number">2</div>
+          <div class="s2-stat_number">$19,834</div>
         </div> 
       </div>
       <div class="s2-div_About" id="s2-div_description">
@@ -140,7 +142,7 @@
             With the outburst, the competition is also increasing, making it hard for new joiners to succeed in the world of streaming. Our goal is to be a life changer for as many small streamers as possible.</div>
         </div>
         <div id="s2-mid">
-          <div class="s2-img"><img src="" alt="Streamraids Logo"></div>
+          <div class="s2-img"><img class="invert" src="./media/soon.svg" alt="Streamraids Logo"></div>
           <div id="s2-description_mid">
             <div class="s2-description_title noselect" id="s2_how">H<span class="letter_blink">o</span>w ?</div>
             <div class="s2-description_text">By having weekly raids and donations to underrated streamers picked up by community. They will be promoted on our website, socials, and inside our community. 
@@ -155,7 +157,7 @@
     <section data-index="2" id="Roadmap" class="s3">
       <div class="s3-div_Roadmap noselect" id="s3-div_title">Roadmap</div>
       <div class="s3-div_Roadmap" id="s3-div_timeline">
-        <div class="s3-timeline_container">
+        <div class="s3-timeline_container" id="s3-timeline_container-top">
           <div class="s3-timeline_item">
             <div class="s3-timeline_item_title noselect">Q1</div>
             <ul class="s3-timeline_item_text">
@@ -174,7 +176,7 @@
           <div class="s3-spacing"></div>
         </div>
 
-        <div class="s3-timeline_container">
+        <div class="s3-timeline_container" id="s3-timeline_container-mid">
           <div class="s3-spacing"></div>
           <div class="s3-timeline_circle-div">
             <div class="s3-timeline_circle" id="s3-timeline_circle_mid"></div>
@@ -194,7 +196,7 @@
         </div>
         
 
-        <div class="s3-timeline_container">
+        <div class="s3-timeline_container" id="s3-timeline_container-bot">
           <div class="s3-timeline_item">
             <div class="s3-timeline_item_title noselect">Q3</div>
             <ul class="s3-timeline_item_text">
@@ -221,10 +223,10 @@
           <div class="s4-info_item"><p class="s4-info_name">Symbol</p><p class="s4-info_number">$SRT</p></div>
           <div class="s4-info_item"><p class="s4-info_name">Type</p><p class="s4-info_number">BEP20</p></div>
           <div class="s4-info_item"><p class="s4-info_name">Chain</p><p class="s4-info_number">BSC</p></div>
-          <div class="s4-info_item"><p class="s4-info_name">Supply</p><p class="s4-info_number">2</p></div>
-          <div class="s4-info_item"><p class="s4-info_name">Price</p><p class="s4-info_number">2</p></div>
-          <div class="s4-info_item"><p class="s4-info_name">Market Cap</p><p class="s4-info_number">2</p></div>
-          <div class="s4-info_item"><p class="s4-info_name">Holders</p><p class="s4-info_number">2</p></div>
+          <div class="s4-info_item"><p class="s4-info_name">Supply</p><p class="s4-info_number">500,000,000,000,000</p></div>
+          <div class="s4-info_item"><p class="s4-info_name">Price</p><p class="s4-info_number">$0.00000000004262</p></div>
+          <div class="s4-info_item"><p class="s4-info_name">Market Cap</p><p class="s4-info_number">$19,834</p></div>
+          <div class="s4-info_item"><p class="s4-info_name">Holders</p><p class="s4-info_number">238</p></div>
         </div>
         
         <div id="s4-div_info_right"> 
@@ -244,12 +246,12 @@
       <div class="s5-div_team noselect" id="s5-div_title">The Team</div>
       <div class="s5-div_team" id="s5-div_content">
         <div class="s5-team_item">
-          <div class="s5-team_img noselect"><img class="s5-img" src="/images/mickey01.jpg" alt="Bogdan Luncasu profile image"></div>
+          <div class="s5-team_img noselect"><img class="s5-img" src="/media/Bogdan.jpg" alt="Bogdan Luncasu profile image"></div>
           <div class="s5-team_description s5-team_description-Name">Bogdan Luncasu</div>
           <div class="s5-team_description">Founder & Lead Developer</div>
           <div class="s5-team_socials noselect">
-            <a class="s5-team_socials_img" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="invert" src="/media/twitter.svg" alt="twitter"></a>
-            <a class="s5-team_socials_img" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="invert" src="/media/twitter.svg" alt="twitter"></a>
+            <a class="s5-team_socials_img" target="_blank" href="https://twitter.com/LuncasuBogdan"><img class="invert" src="/media/twitter.svg" alt="twitter"></a>
+            <a class="s5-team_socials_img" target="_blank" href="https://www.linkedin.com/in/bogdan-cristian-luncasu/"><img class="invert" src="/media/linkedin-icon-seeklogo.com.svg" alt="LinkedIn"></a>
           </div>
         </div>
         <div class="s5-team_item">
@@ -262,7 +264,7 @@
           </div>
         </div>
         <div class="s5-team_item">
-          <div class="s5-team_img noselect"><img class="s5-img" src="/images/mickey01.jpg" alt="Miquel Romeu profile image"></div>
+          <div class="s5-team_img noselect"><img class="s5-img" src="/media/MiquelRomeu.jpg" alt="Miquel Romeu profile image"></div>
           <div class="s5-team_description s5-team_description-Name">Miquel Romeu</div>
           <div class="s5-team_description">Web Dev</div>
           <div class="s5-team_socials noselect">
@@ -310,68 +312,7 @@
         <a class="foot-developedby_link" target="_blank" href="https://github.com/MiquelRomeu">MiquelRomeu</a>
       </div>
     </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <script src="app.js"></script>
   </body>
 </html>
-
-
-
 
