--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header class="header noselect s1-opacity_appear">
       <div class="logo_div">
         <a class="logo_link link" href="https://poocoin.app/tokens/0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank">
-          <img class ="logo_img" src="./media/coming-soon.svg" alt="Streamraids Logo">
+          <img class ="logo_img invert" src="./media/Logotype SVG.svg" alt="Streamraids Logo">
         </a>
       </div>
       <nav class="nav_bar">
@@ -142,7 +142,7 @@
             With the outburst, the competition is also increasing, making it hard for new joiners to succeed in the world of streaming. Our goal is to be a life changer for as many small streamers as possible.</div>
         </div>
         <div id="s2-mid">
-          <div class="s2-img"><img class="invert" src="./media/soon.svg" alt="Streamraids Logo"></div>
+          <div class="s2-img"><img class="invert" src="./media/Logotype SVG.svg" alt="Streamraids Logo"></div>
           <div id="s2-description_mid">
             <div class="s2-description_title noselect" id="s2_how">H<span class="letter_blink">o</span>w ?</div>
             <div class="s2-description_text">By having weekly raids and donations to underrated streamers picked up by community. They will be promoted on our website, socials, and inside our community. 
