--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="icon" href="/media/Logotype_SVG.svg">
-    <link rel=”mask-icon” href=”/media/Logotype_SVG.svg” color=”#000000">
+    <link rel=”mask-icon” href=”/media/Logotype_SVG.svg” color='#000000'>
     <title>Home | StreamRaids</title>
     <meta 
           name="description"
@@ -66,6 +66,16 @@
             </span>
             <span class="social_media_text_span social_media-span">
               <p class="social_media-p">Twitch</p>
+            </span>
+          </a>
+        </li>
+        <li class="side_bar-list-item" id="list_item-Youtube">
+          <a class="side_bar-social_media link" href="https://www.youtube.com/channel/UCSJgK9usWKYmXQ7BXL0aqEA" target="_blank">
+            <span class="social_media-img_span social_media-span">
+              <img class="social_media-img_youtube social_media-img invert" id="side_bar-youtube_icon" src="./media/youtube.svg" alt="youtube">
+            </span>
+            <span class="social_media_text_span social_media-span">
+              <p class="social_media-p">Youtube</p>
             </span>
           </a>
         </li>
