--- a/index.html
+++ b/index.html
@@ -169,15 +169,18 @@
       <div class="s3-div_Roadmap" id="s3-div_timeline">
         <div class="s3-timeline_container" id="s3-timeline_container-top">
           <div class="s3-timeline_item">
-            <div class="s3-timeline_item_title noselect">Q1</div>
+            <div class="s3-timeline_item_title noselect">Q2</div>
             <ul class="s3-timeline_item_text">
-              <li>Token launch</li>
+              <li>Token Launch</li>
               <li>List on PancakeSwap</li>
-              <li>Create the website</li>
-              <li>Create the social media</li>
-              <li>Whitepaper</li>
-              <li>Influencers marketing</li>
-              <li>First stream raid</li>
+              <li>Dev Team Assembly</li>
+              <li>Create the Website</li>
+              <li>Create the Social Media</li>
+              <li>First Stream Raid</li>
+              <li>White/Lite Paper</li>
+              <li>Business Plan for use-case</li>
+              <li>Token & Project Branding</li>
+              <li>Influencers Marketing</li>
             </ul>
           </div>
           <div class="s3-timeline_circle-div">
@@ -192,15 +195,19 @@
             <div class="s3-timeline_circle" id="s3-timeline_circle_mid"></div>
           </div>
           <div class="s3-timeline_item">
-            <div class="s3-timeline_item_title noselect">Q2</div>
+            <div class="s3-timeline_item_title noselect">Q3</div>
             <ul class="s3-timeline_item_text">
-              <li>Coingecko application</li>
-              <li>CMC application</li>
-              <li>Contract audit</li>
-              <li>Create Streamraids mobile app</li>
-              <li>More influencers marketing</li>
-              <li>Streamers as part of the community</li>
-              <li>Develop a streaming mentorship platform</li>
+              <li>Community Voting Platform</li>
+              <li>Contract Audit</li>
+              <li>Exchange Listinigs</li>
+              <li>Website Platform fot Creators (BETA)</li>
+              <li>Brand Partnerships</li>
+              <li>More Stream Raids</li>
+              <li>Merchandise</li>
+              <li>Continued Marketing</li>
+              <li>Streaming Mentorship Platform</li>
+              <li>Coingecko Application</li>
+              <li>CMC Application</li>
             </ul>
           </div>
         </div>
@@ -208,10 +215,13 @@
 
         <div class="s3-timeline_container" id="s3-timeline_container-bot">
           <div class="s3-timeline_item">
-            <div class="s3-timeline_item_title noselect">Q3</div>
+            <div class="s3-timeline_item_title noselect">Q4</div>
             <ul class="s3-timeline_item_text">
-              <li>Charity stream</li>
-              <li>Merch</li>
+              <li>More Brand Partnerships</li>
+              <li>More Exchange Listings</li>
+              <li>Website Platform Launched</li>
+              <li>$SRT Tipping Platform Launched</li>
+              <li>Mobile Application (BETA)</li>
               <li>More to come...</li>
             </ul>
           </div>
