fix small typos in roadmap

--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
             <ul class="s3-timeline_item_text">
               <li>Community Voting Platform</li>
               <li>Contract Audit</li>
-              <li>Exchange Listinigs</li>
-              <li>Website Platform fot Creators (BETA)</li>
+              <li>Exchange Listings</li>
+              <li>Website Platform for Creators (BETA)</li>
               <li>Brand Partnerships</li>
               <li>More Stream Raids</li>
               <li>Merchandise</li>
