--- a/index.html
+++ b/index.html
@@ -162,6 +162,19 @@
       </div>
     </section>
 
+    <div class="divider noselect" id="divider_about"></div>
+
+    <section id="Media" class="s6">
+      <div class="s6-div_Media noselect" id="s6-div_title">Media</div>
+      <div class="s6-div_Media" id="s6-div_content">
+        <iframe id="s6-video" src="https://www.youtube.com/embed/X2vy4Z9hQZg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <ul id="s6-navigation">
+          <li><img src="media/bobczak_thumbnail.png" alt="bobczak_thumbnail"></li>
+          <li><img src="media/joryavnermusic_thumbnail.png" alt="joryavnermusic_thumbnail"></li>
+        </ul>
+      </div>
+    </section>
+
     <div class="divider noselect" id="divider_roadmap"></div>
 
     <section data-index="2" id="Roadmap" class="s3">
