Media section done

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <nav class="nav_bar">
         <a class="nav_bar-a link" id="Nav_home" data-page="s1" href="#Home">Home</a>
         <a class="nav_bar-a link" id="Nav_about" data-page="s2" href="#About">About</a>
+        <a class="nav_bar-a link" id="Nav_media" data-page="s6" href="#Media">Media</a>
         <a class="nav_bar-a link" id="Nav_roadmap" data-page="s3" href="#Roadmap">Roadmap</a>
         <a class="nav_bar-a link" id="Nav_tokenomics" data-page="s4" href="#Tokenomics">Tokenomics</a>
         <a class="nav_bar-a link" id="Nav_theTeam" data-page="s5" href="#The_Team">The Team</a>
