--- a/Voting Platform/index_voting_platform.html
+++ b/Voting Platform/index_voting_platform.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="../Voting Platform/style_voting_platform.css" />
+    <link href="http://fonts.cdnfonts.com/css/soleil" rel="stylesheet">
     <link rel="icon" href="../media/Logotype_SVG.svg">
     <link rel=”mask-icon” href=”../media/Logotype_SVG.svg” color='#000000'>
     <title>Voting Platform | StreamRaids</title>
@@ -88,39 +89,41 @@
     </header>
 
     <section id="auth_section">
-        <img src="" alt="voting_platform_background">
+      <img src="../media/Background.png" class="background_img" alt="Voting platform background">
         <div class="auth_section-container">
             <div class="auth_section-div_img">
-                <img class="auth_section-img" src="" alt="">
+                <img class="auth_section-img" src="../media/MetaMask_Fox.png" alt="">
             </div>
-            <div class="auth_section-button">Connect</div>
-            <p class="auth_section-paragraf"></p>
+            <div class="auth_section-button"><p>CONNECT</p></div>
+            <p class="auth_section-paragraf">Please connecta wallet to access the voting platform.</p>
+            <p class="auth_section-paragraf">Remember, you needto be holding $SRT to vote!</p>
         </div>
     </section>
 
     <section id="submit_section">
-        <img src="" alt="voting_platform_backgroud">
+      <img src="../media/Background.png" class="background_img" alt="Voting platform background">
         <div class="submit_section-container">
             <div class="common-div">
                 <div class="common-info">
                     <h3 class="common-info_title">Lorem ipsum dolor sit amet.</h3>
-                    <p class="common-info_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ullam laboriosam unde, laudantium fugiat, sed libero qui delectus exercitationem necessitatibus doloremque earum temporibus iure doloribus repellendus ipsam dolores error assumenda omnis aut, mollitia rem. Nam, repudiandae! Architecto temporibus molestias possimus!</p>
+                    <p class="common-info_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus non quos beatae sed sunt unde voluptatem reiciendis recusandae esse provident quas, consequatur repudiandae dolores fugit id eos! Praesentium ut maiores consectetur sapiente dolore quia impedit harum et dolores tempora voluptates reprehenderit, cum id recusandae inventore ipsam odit iusto veritatis itaque totam ratione in maxime dolorem quas? Accusamus similique ipsum non voluptas blanditiis, vel temporibus necessitatibus quam quasi quo modi quisquam excepturi reprehenderit? Consectetur veritatis magnam nam, nemo quidem consequuntur perspiciatis accusamus sit ex. Delectus, totam incidunt harum asperiores odio obcaecati quam dolores libero ullam, earum minima cum atque quasi dolor.</p>
                 </div>
                 <div class="common-last_winner">
                     <h3 class="common-last_winner_title">Lorem ipsum dolor sit amet.</h3>
                     <a class="common-last_winner_link" href="">
                         <div class="common-last_winner_img">
-                            <img src="" alt="">
+                            <img src="../media/MiquelRomeu.jpg" alt="">
                         </div>
-                        <h2>Lorem, ipsum.</h2>
-                        <div class="common-last_winner_icon">
-                            <img src="" alt="">
+                        <div id="last_winner_name"><p>Miquelonis</p></div>
+                        <div class="common-last_winner_img">
+                            <img src="../media/MiquelRomeu.jpg" alt="">
                         </div>
+                        <i class="fas fa-external-link"></i>
                     </a>
                     <div class="common-last_winner_socials">
-                        <a class="common-last_winner_socials_img" href="" target="_blank"><img src="../media/twitch.svg" alt="twitch"></a>
+                        <!-- <a class="common-last_winner_socials_img" href="" target="_blank"><img src="../media/twitch.svg" alt="twitch"></a>
                         <a class="common-last_winner_socials_img" href="" target="_blank"><img src="../media/youtube.svg" alt="youtube"></a>
-                        <a class="common-last_winner_socials_img" href="" target="_blank"><img src="../media/twitter.svg" alt="twitter"></a>
+                        <a class="common-last_winner_socials_img" href="" target="_blank"><img src="../media/twitter.svg" alt="twitter"></a> -->
                     </div>
                 </div>
             </div>
@@ -137,36 +140,89 @@
                     <input id="streamer_links_4" type="text" placeholder="Enter Socials Links">
                     <input id="submit" type="submit" value="Submit!">
                 </form>
-                <div class="common-countdown">Countdown</div>                
+                <div class="common-countdown"></div>                
             </div>
         </div>
     </section>
 
     <section id="vote_section">
-        <img src="" alt="voting_platform_backgroud">
+      <img src="../media/Background.png" class="background_img" alt="Voting platform background">
         <div class="vote_section-container">
-            
+          <div class="common-div">
+            <div class="common-info">
+                <h3 class="common-info_title">Lorem ipsum dolor sit amet.</h3>
+                <p class="common-info_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ullam laboriosam unde, laudantium fugiat, sed libero qui delectus exercitationem necessitatibus doloremque earum temporibus iure doloribus repellendus ipsam dolores error assumenda omnis aut, mollitia rem. Nam, repudiandae! Architecto temporibus molestias possimus!</p>
+            </div>
+            <div class="common-last_winner">
+                <h3 class="common-last_winner_title">Lorem ipsum dolor sit amet.</h3>
+                <a class="common-last_winner_link" href="">
+                    <div class="common-last_winner_img">
+                        <img src="" alt="">
+                    </div>
+                    <h2>Lorem, ipsum.</h2>
+                    <div class="common-last_winner_icon">
+                        <img src="" alt="">
+                    </div>
+                </a>
+                <div class="common-last_winner_socials">
+                    <a class="common-last_winner_socials_img" href="" target="_blank"><img src="../media/twitch.svg" alt="twitch"></a>
+                    <a class="common-last_winner_socials_img" href="" target="_blank"><img src="../media/youtube.svg" alt="youtube"></a>
+                    <a class="common-last_winner_socials_img" href="" target="_blank"><img src="../media/twitter.svg" alt="twitter"></a>
+                </div>
+            </div>
+        </div>
+        <div class="vote_section-div">
+          <div class="vote_section-search">
+            <i class="fas fa-search"></i>
+            <input id="search_streamer" type="text">
+          </div>
+          <div class="vote_section-main">
+            <div class="vote_section-leaderboard">
+              <h2 class="vote_section-leaderboard_title">Voting Leaderboard</h2>
+              <div class="vote_section-leaderboard_tag">
+                <h1 class="vote_section-leaderboard_tag_number"></h1>
+                <div class="vote_section-leaderboard_tag_streamer">
+                  <div class="vote_section-leaderboard_tag_streamer_img">
+                    <img src="" alt="">
+                  </div>
+                  <h2>Lorem, ipsum.</h2>
+                  <i class="fas fa-plus"></i>
+                </div>
+              </div>
+            </div>
+            <div class="vote_section-list">
+              <div class="vote_section-list_tag_streamer">
+                <div class="vote_section-list_tag_streamer_img">
+                  <img src="" alt="">
+                </div>
+                <h2>Lorem, ipsum.</h2>
+                <i class="fas fa-plus"></i>
+              </div>
+            </div>
+          </div>
+          <div class="common-countdown"></div>                
+        </div>
         </div>
     </section>
     
     <footer>
-        <div class="foot-div noselect" id="foot-info">
+        <div class="foot-div foot-div-social noselect" id="foot-info">
           <div class="foot-info_socials">
-            <a class="foot-info_socials_img" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank"><img class="invert" src="../media/pancakeswap.svg" alt="pancakeswap"></a>
+            <!-- <a class="foot-info_socials_img" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank"><img class="invert" src="../media/pancakeswap.svg" alt="pancakeswap"></a>
             <a class="foot-info_socials_img" href="https://www.twitch.tv/streamraidsbsc/" target="_blank"><img class="invert" src="../media/twitch.svg" alt="twitch"></a>
             <a class="foot-info_socials_img" href="https://www.youtube.com/channel/UCSJgK9usWKYmXQ7BXL0aqEA" target="_blank"><img class="invert" src="../media/youtube.svg" alt="youtube"></a>
             <a class="foot-info_socials_img" href="https://twitter.com/StreamRaidsBSC" target="_blank"><img class="invert" src="../media/twitter.svg" alt="twitter"></a>
-            <a class="foot-info_socials_img" href="https://t.me/streamraidsbsc" target="_blank"><img src="../media/telegram.svg" alt="telegram"></a>
+            <a class="foot-info_socials_img" href="https://t.me/streamraidsbsc" target="_blank"><img src="../media/telegram.svg" alt="telegram"></a> -->
           </div>
         </div>
-        <div class="foot-div noselect" id="foot-copyright">© 2021
-          <a class="foot-developedby_link" id="foot_streamraids-link" target="_blank" href="https://t.me/streamraidsbsc">StreamRaids</a>
-          | All Rights Reserved.</div>
-        <div class="foot-div noselect" id="foot-developedby">
-          <p>Web developed by</p>
-          <a class="foot-developedby_link" target="_blank" href="https://github.com/TheWalKer-TW">TheWalKer-TW</a>
-          <p>&</p>
-          <a class="foot-developedby_link" target="_blank" href="https://github.com/MiquelRomeu">MiquelRomeu</a>
+        <div class="foot-div noselect">
+          <div class="foot-div-text noselect" id="foot-copyright">© 2021
+            <a class="foot-developedby_link" id="foot_streamraids-link" target="_blank" href="https://t.me/streamraidsbsc">StreamRaids</a>
+            | All Rights Reserved.
+          </div>
+          <div class="foot-div-text noselect" id="foot-developedby">
+            Web developed by <a class="foot-developedby_link" target="_blank" href="https://github.com/TheWalKer-TW">TheWalKer-TW</a> & <a class="foot-developedby_link" target="_blank" href="https://github.com/MiquelRomeu">MiquelRomeu</a>
+          </div>
         </div>
     </footer>
 
