--- a/Voting Platform/index_voting_platform.html
+++ b/Voting Platform/index_voting_platform.html
@@ -114,16 +114,16 @@
                         <div class="common-last_winner_img">
                             <img src="../media/MiquelRomeu.jpg" alt="">
                         </div>
-                        <div id="last_winner_name"><p>Miquelonis</p></div>
+                        <div id="last_winner_name"><p>Miquelonis6969</p></div>
                         <div class="common-last_winner_img">
                             <img src="../media/MiquelRomeu.jpg" alt="">
                         </div>
                         <i class="fas fa-external-link"></i>
                     </a>
                     <div class="common-last_winner_socials">
-                        <!-- <a class="common-last_winner_socials_img" href="" target="_blank"><img src="../media/twitch.svg" alt="twitch"></a>
+                        <a class="common-last_winner_socials_img" href="" target="_blank"><img src="../media/twitch.svg" alt="twitch"></a>
                         <a class="common-last_winner_socials_img" href="" target="_blank"><img src="../media/youtube.svg" alt="youtube"></a>
-                        <a class="common-last_winner_socials_img" href="" target="_blank"><img src="../media/twitter.svg" alt="twitter"></a> -->
+                        <a class="common-last_winner_socials_img" href="" target="_blank"><img src="../media/twitter.svg" alt="twitter"></a>
                     </div>
                 </div>
             </div>
