--- a/Voting Platform/index_voting_platform.html
+++ b/Voting Platform/index_voting_platform.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://use.typekit.net/cyz5xbz.css%22%3E%3E" />
     <link rel="stylesheet" href="../Voting Platform/style_voting_platform.css" />
     <link href="http://fonts.cdnfonts.com/css/soleil" rel="stylesheet">
     <link rel="icon" href="../media/Logotype_SVG.svg">
     <link rel=”mask-icon” href=”../media/Logotype_SVG.svg” color='#000000'>
     <title>Voting Platform | StreamRaids</title>
+    <script src="https://kit.fontawesome.com/1f2a7c4ad4.js" crossorigin="anonymous"></script>
     <meta 
             name="description"
             content="The streaming platforms are increasing day by day, the pandemic made many people join the streaming community and as a result, we can see the outburst these platforms had in the last months.
@@ -77,15 +79,25 @@
     <header class="header noselect s1-opacity_appear">
         <div class="logo_div">
           <a class="logo_link link" href="https://poocoin.app/tokens/0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank">
-            <img class ="logo_img" src="../media/Logotype_SVG.svg" alt="Streamraids Logo">
+            <img class ="logo_img" src="../media/Logotype Full SVG.svg" alt="Streamraids Logo">
           </a>
         </div>
         <nav class="nav_bar">
-            <a class="nav_bar-a" id="Nav_mainSite" href="../index.html">Main Site</a>
-            <a class="nav_bar-a" id="Nav_roadmap" href="../index.html#Roadmap">Roadmap</a>
-            <a class="nav_bar-a" id="Nav_theTeam" href="../index.html#The_Team">The Team</a>
-            <a class="nav_bar-a" id="Nav_help" href="../index.html#Help">Help</a>
+            <a class="nav_bar-a" id="Nav_mainSite" href="../index.html"><span>Main Site</span></a>
+            <a class="nav_bar-a" id="Nav_roadmap" href="../index.html#Roadmap"><span>Roadmap</span></a>
+            <a class="nav_bar-a" id="Nav_theTeam" href="../index.html#The_Team"><span>The Team</span></a>
+            <a class="nav_bar-a" id="Nav_help" href="../index.html#Help"><span>Help</span></a>
         </nav>
+        <div class="wallet_div">
+          <div class="wallet_div-metamask">
+            <img src="../media/MetaMask_Fox.png" alt="Streamraids Logo">
+            <span id="wallet_address">Wallet Address</span>
+          </div>
+          <div class="wallet_div-metamask">
+            <img src="../media/Logotype_SVG.svg" alt="Streamraids Logo">
+            <span id="wallet_address">SRT amount</span>
+          </div>
+        </div>
     </header>
 
     <section id="auth_section">
@@ -94,8 +106,8 @@
             <div class="auth_section-div_img">
                 <img class="auth_section-img" src="../media/MetaMask_Fox.png" alt="">
             </div>
-            <div class="auth_section-button"><p>CONNECT</p></div>
-            <p class="auth_section-paragraf">Please connecta wallet to access the voting platform.</p>
+            <button class="auth_section-button noselect"><p>CONNECT</p></button>
+            <p class="auth_section-paragraf">Please connect a wallet to access the voting platform.</p>
             <p class="auth_section-paragraf">Remember, you needto be holding $SRT to vote!</p>
         </div>
     </section>
@@ -115,10 +127,9 @@
                             <img src="../media/MiquelRomeu.jpg" alt="">
                         </div>
                         <div id="last_winner_name"><p>Miquelonis6969</p></div>
-                        <div class="common-last_winner_img">
-                            <img src="../media/MiquelRomeu.jpg" alt="">
+                        <div class="common-last_winner_external_link">
+                          <img class="invert" src="../media/External_link_font_awesome.svg.png" alt="">
                         </div>
-                        <i class="fas fa-external-link"></i>
                     </a>
                     <div class="common-last_winner_socials">
                         <a class="common-last_winner_socials_img" href="" target="_blank"><img src="../media/twitch.svg" alt="twitch"></a>
@@ -134,11 +145,11 @@
                     <h2>Streamer's Platforms</h2>
                     <input id="streamer_platform" type="text" placeholder="Enter Streamer's Platforms">
                     <h2>Streamer's Social Links</h2>
-                    <input id="streamer_links_1" type="text" placeholder="Enter Socials Links">
-                    <input id="streamer_links_2" type="text" placeholder="Enter Socials Links">
-                    <input id="streamer_links_3" type="text" placeholder="Enter Socials Links">
-                    <input id="streamer_links_4" type="text" placeholder="Enter Socials Links">
-                    <input id="submit" type="submit" value="Submit!">
+                    <input id="streamer_links_1" type="text" placeholder="(Enter url here)">
+                    <input id="streamer_links_2" type="text" placeholder="(Enter url here)">
+                    <input id="streamer_links_3" type="text" placeholder="(Enter url here)">
+                    <input id="streamer_links_4" type="text" placeholder="(Enter url here)">
+                    <button id="submit" type="submit" value="Submit!">Submit!</button>
                 </form>
                 <div class="common-countdown"></div>                
             </div>
@@ -151,18 +162,18 @@
           <div class="common-div">
             <div class="common-info">
                 <h3 class="common-info_title">Lorem ipsum dolor sit amet.</h3>
-                <p class="common-info_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ullam laboriosam unde, laudantium fugiat, sed libero qui delectus exercitationem necessitatibus doloremque earum temporibus iure doloribus repellendus ipsam dolores error assumenda omnis aut, mollitia rem. Nam, repudiandae! Architecto temporibus molestias possimus!</p>
+                <p class="common-info_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus non quos beatae sed sunt unde voluptatem reiciendis recusandae esse provident quas, consequatur repudiandae dolores fugit id eos! Praesentium ut maiores consectetur sapiente dolore quia impedit harum et dolores tempora voluptates reprehenderit, cum id recusandae inventore ipsam odit iusto veritatis itaque totam ratione in maxime dolorem quas? Accusamus similique ipsum non voluptas blanditiis, vel temporibus necessitatibus quam quasi quo modi quisquam excepturi reprehenderit? Consectetur veritatis magnam nam, nemo quidem consequuntur perspiciatis accusamus sit ex. Delectus, totam incidunt harum asperiores odio obcaecati quam dolores libero ullam, earum minima cum atque quasi dolor.</p>
             </div>
             <div class="common-last_winner">
                 <h3 class="common-last_winner_title">Lorem ipsum dolor sit amet.</h3>
                 <a class="common-last_winner_link" href="">
-                    <div class="common-last_winner_img">
-                        <img src="" alt="">
-                    </div>
-                    <h2>Lorem, ipsum.</h2>
-                    <div class="common-last_winner_icon">
-                        <img src="" alt="">
-                    </div>
+                  <div class="common-last_winner_img">
+                      <img src="../media/MiquelRomeu.jpg" alt="">
+                  </div>
+                  <div id="last_winner_name"><p>Miquelonis6969</p></div>
+                  <div class="common-last_winner_external_link">
+                      <img class="invert" src="../media/External_link_font_awesome.svg.png" alt="">
+                  </div>
                 </a>
                 <div class="common-last_winner_socials">
                     <a class="common-last_winner_socials_img" href="" target="_blank"><img src="../media/twitch.svg" alt="twitch"></a>
@@ -174,29 +185,129 @@
         <div class="vote_section-div">
           <div class="vote_section-search">
             <i class="fas fa-search"></i>
-            <input id="search_streamer" type="text">
+            <input id="search_streamer" placeholder="Search by streamers name..." type="text">
           </div>
           <div class="vote_section-main">
             <div class="vote_section-leaderboard">
               <h2 class="vote_section-leaderboard_title">Voting Leaderboard</h2>
               <div class="vote_section-leaderboard_tag">
-                <h1 class="vote_section-leaderboard_tag_number"></h1>
+                <h1 class="vote_section-leaderboard_tag_number">#1</h1>
                 <div class="vote_section-leaderboard_tag_streamer">
                   <div class="vote_section-leaderboard_tag_streamer_img">
-                    <img src="" alt="">
+                    <img src="../media/MiquelRomeu.jpg" alt="">
                   </div>
-                  <h2>Lorem, ipsum.</h2>
-                  <i class="fas fa-plus"></i>
+                  <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis6969</p></div>
+                  <div class="vote_section-leaderboard_tag_streamer_plus">
+                    <button><i class="fas fa-plus"></i></button>
+                  </div>
                 </div>
               </div>
+              <!--  -->
+              <div class="vote_section-leaderboard_tag">
+                <h1 class="vote_section-leaderboard_tag_number">#1</h1>
+                <div class="vote_section-leaderboard_tag_streamer">
+                  <div class="vote_section-leaderboard_tag_streamer_img">
+                    <img src="../media/MiquelRomeu.jpg" alt="">
+                  </div>
+                  <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis6969</p></div>
+                  <div class="vote_section-leaderboard_tag_streamer_plus">
+                    <button><i class="fas fa-plus"></i></button>
+                  </div>
+                </div>
+              </div>
+              <!--  -->
+              <div class="vote_section-leaderboard_tag">
+                <h1 class="vote_section-leaderboard_tag_number">#1</h1>
+                <div class="vote_section-leaderboard_tag_streamer">
+                  <div class="vote_section-leaderboard_tag_streamer_img">
+                    <img src="../media/MiquelRomeu.jpg" alt="">
+                  </div>
+                  <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis6969</p></div>
+                  <div class="vote_section-leaderboard_tag_streamer_plus">
+                    <button><i class="fas fa-plus"></i></button>
+                  </div>
+                </div>
+              </div>
+              <!--  -->
+              <div class="vote_section-leaderboard_tag">
+                <h1 class="vote_section-leaderboard_tag_number">#1</h1>
+                <div class="vote_section-leaderboard_tag_streamer">
+                  <div class="vote_section-leaderboard_tag_streamer_img">
+                    <img src="../media/MiquelRomeu.jpg" alt="">
+                  </div>
+                  <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis6969</p></div>
+                  <div class="vote_section-leaderboard_tag_streamer_plus">
+                    <button><i class="fas fa-plus"></i></button>
+                  </div>
+                </div>
+              </div>
+              <!--  -->
+              <div class="vote_section-leaderboard_tag">
+                <h1 class="vote_section-leaderboard_tag_number">#1</h1>
+                <div class="vote_section-leaderboard_tag_streamer">
+                  <div class="vote_section-leaderboard_tag_streamer_img">
+                    <img src="../media/MiquelRomeu.jpg" alt="">
+                  </div>
+                  <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis6969</p></div>
+                  <div class="vote_section-leaderboard_tag_streamer_plus">
+                    <button><i class="fas fa-plus"></i></button>
+                  </div>
+                </div>
+              </div>
+              <!--  -->
             </div>
             <div class="vote_section-list">
-              <div class="vote_section-list_tag_streamer">
-                <div class="vote_section-list_tag_streamer_img">
-                  <img src="" alt="">
+              <div class="vote_section-list_overflow">
+                <div class="vote_section-list_tag_streamer">
+                  <div class="vote_section-list_tag_streamer_img">
+                    <img src="../media/MiquelRomeu.jpg" alt="">
+                  </div>
+                  <div class="vote_section-list_tag_streamer_name"><p>Miquelonis6969</p></div>
+                  <div class="vote_section-list_tag_streamer_plus">
+                    <button><i class="fas fa-plus invert"></i></button>
+                  </div>
                 </div>
-                <h2>Lorem, ipsum.</h2>
-                <i class="fas fa-plus"></i>
+                <!--  -->
+                <div class="vote_section-list_tag_streamer">
+                  <div class="vote_section-list_tag_streamer_img">
+                    <img src="../media/MiquelRomeu.jpg" alt="">
+                  </div>
+                  <div class="vote_section-list_tag_streamer_name"><p>Miquelonis6969</p></div>
+                  <div class="vote_section-list_tag_streamer_plus">
+                    <button><i class="fas fa-plus invert"></i></button>
+                  </div>
+                </div>
+                <!--  -->
+                <div class="vote_section-list_tag_streamer">
+                  <div class="vote_section-list_tag_streamer_img">
+                    <img src="../media/MiquelRomeu.jpg" alt="">
+                  </div>
+                  <div class="vote_section-list_tag_streamer_name"><p>Miquelonis6969</p></div>
+                  <div class="vote_section-list_tag_streamer_plus">
+                    <button><i class="fas fa-plus invert"></i></button>
+                  </div>
+                </div>
+                <!--  -->
+                <div class="vote_section-list_tag_streamer">
+                  <div class="vote_section-list_tag_streamer_img">
+                    <img src="../media/MiquelRomeu.jpg" alt="">
+                  </div>
+                  <div class="vote_section-list_tag_streamer_name"><p>Miquelonis6969</p></div>
+                  <div class="vote_section-list_tag_streamer_plus">
+                    <button><i class="fas fa-plus invert"></i></button>
+                  </div>
+                </div>
+                <!--  -->
+                <div class="vote_section-list_tag_streamer">
+                  <div class="vote_section-list_tag_streamer_img">
+                    <img src="../media/MiquelRomeu.jpg" alt="">
+                  </div>
+                  <div class="vote_section-list_tag_streamer_name"><p>Miquelonis6969</p></div>
+                  <div class="vote_section-list_tag_streamer_plus">
+                    <button><i class="fas fa-plus invert"></i></button>
+                  </div>
+                </div>
+                <!--  -->
               </div>
             </div>
           </div>
@@ -208,11 +319,11 @@
     <footer>
         <div class="foot-div foot-div-social noselect" id="foot-info">
           <div class="foot-info_socials">
-            <!-- <a class="foot-info_socials_img" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank"><img class="invert" src="../media/pancakeswap.svg" alt="pancakeswap"></a>
+            <a class="foot-info_socials_img" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank"><img class="invert" src="../media/pancakeswap.svg" alt="pancakeswap"></a>
             <a class="foot-info_socials_img" href="https://www.twitch.tv/streamraidsbsc/" target="_blank"><img class="invert" src="../media/twitch.svg" alt="twitch"></a>
             <a class="foot-info_socials_img" href="https://www.youtube.com/channel/UCSJgK9usWKYmXQ7BXL0aqEA" target="_blank"><img class="invert" src="../media/youtube.svg" alt="youtube"></a>
             <a class="foot-info_socials_img" href="https://twitter.com/StreamRaidsBSC" target="_blank"><img class="invert" src="../media/twitter.svg" alt="twitter"></a>
-            <a class="foot-info_socials_img" href="https://t.me/streamraidsbsc" target="_blank"><img src="../media/telegram.svg" alt="telegram"></a> -->
+            <a class="foot-info_socials_img" href="https://t.me/streamraidsbsc" target="_blank"><img src="../media/telegram.svg" alt="telegram"></a>
           </div>
         </div>
         <div class="foot-div noselect">
@@ -221,7 +332,7 @@
             | All Rights Reserved.
           </div>
           <div class="foot-div-text noselect" id="foot-developedby">
-            Web developed by <a class="foot-developedby_link" target="_blank" href="https://github.com/TheWalKer-TW">TheWalKer-TW</a> & <a class="foot-developedby_link" target="_blank" href="https://github.com/MiquelRomeu">MiquelRomeu</a>
+            Web design by <a class="foot-developedby_link" target="_blank" href="https://www.mauicreative.co.uk/">Maui Creative</a>. Web developed by <a class="foot-developedby_link" target="_blank" href="https://github.com/TheWalKer-TW">TheWalKer-TW</a> & <a class="foot-developedby_link" target="_blank" href="https://github.com/MiquelRomeu">MiquelRomeu</a>
           </div>
         </div>
     </footer>
